--- a/views/index.ejs
+++ b/views/index.ejs
@@ -284,10 +284,10 @@
                         <div class="transparent_squareA transparent_left"></div>
                       </div>
                       <div class="temp_box  temp_box_max">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayA_wtr.max[1]%> at <%=dayA_wtr.max[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayA_wtr.max[1]%>º at <%=dayA_wtr.max[0]%>h</p>
                       </div>
                       <div class="temp_box  temp_box_min">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayA_wtr.min[1]%> at <%=dayA_wtr.min[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayA_wtr.min[1]%>º at <%=dayA_wtr.min[0]%>h</p>
                       </div>
                       <div class="square_receiver">
                         <div class="transparent_squareA"></div>
@@ -385,10 +385,10 @@
                         <div class="transparent_squareA transparent_left"></div>
                       </div>
                       <div class="temp_box  temp_box_max">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayB_wtr.max[1]%> at <%=dayB_wtr.max[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayB_wtr.max[1]%>º at <%=dayB_wtr.max[0]%>h</p>
                       </div>
                       <div class="temp_box  temp_box_min">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayB_wtr.min[1]%> at <%=dayB_wtr.min[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayB_wtr.min[1]%>º at <%=dayB_wtr.min[0]%>h</p>
                       </div>
                       <div class="square_receiver">
                         <div class="transparent_squareA"></div>
@@ -403,17 +403,6 @@
             </div> <!-- class="weather_day" id="weather_day1" -->
 
           </div> <!-- class="row text-center row-days dayA" id="day1" -->
-
-
-
-
-
-
-
-
-
-
-
 
 
           <div class="row text-center row-days dayB" id="day2">
@@ -566,10 +555,10 @@
                         <div class="transparent_squareA transparent_left"></div>
                       </div>
                       <div class="temp_box  temp_box_max">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayB_wtr.max[1]%> at <%=dayB_wtr.max[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayB_wtr.max[1]%>º at <%=dayB_wtr.max[0]%>h</p>
                       </div>
                       <div class="temp_box  temp_box_min">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayB_wtr.min[1]%> at <%=dayB_wtr.min[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayB_wtr.min[1]%>º at <%=dayB_wtr.min[0]%>h</p>
                       </div>
                       <div class="square_receiver">
                         <div class="transparent_squareA"></div>
@@ -667,10 +656,10 @@
                         <div class="transparent_squareA transparent_left"></div>
                       </div>
                       <div class="temp_box  temp_box_max">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayC_wtr.max[1]%> at <%=dayC_wtr.max[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightcoral;">&#8593; </span><%=dayC_wtr.max[1]%>º at <%=dayC_wtr.max[0]%>h</p>
                       </div>
                       <div class="temp_box  temp_box_min">
-                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayC_wtr.min[1]%> at <%=dayC_wtr.min[0]%>h</p>
+                        <p class="max_min_box"><span class="span_arrow" style="color: lightskyblue;">&#8595; </span><%=dayC_wtr.min[1]%>º at <%=dayC_wtr.min[0]%>h</p>
                       </div>
                       <div class="square_receiver">
                         <div class="transparent_squareA"></div>
@@ -683,6 +672,7 @@
               <%}%>
             </div>            
           </div> <!-- class="row text-center row-days dayB" id="day2" -->
+          
 
           <div class="row row-days" id="next_events">
             <%let days_7 = JSON.parse(days_7_PH);%>
@@ -980,7 +970,7 @@
                   <option value="por" class="context_lang_por">🇧🇷 Português</option>
                 </select>
               </td>
-            </tr> 
+            </tr>
             <tr>
               <td class="context_td" style="color: lightcoral;">New password:</td><td class="context_td"><input type="password" name="new_pw" id="new_pw" placeholder="(only if you want to change)" style="color: lightcoral; letter-spacing: -1.4px;"></td>
             </tr>
