--- a/views/reg_failed.ejs
+++ b/views/reg_failed.ejs
@@ -15,17 +15,17 @@
 </head>
 
 <body>
-  <form action="/registration_successfull" method="post" name="red_login-form" id="red_login-form"></form>
-  <div id="shine-div">
+  <form action="/registration_failed" method="post" name="red_login-form" id="red_login-form"></form>
+  <div id="shine-div_fail">
 
       <div class="whole-screen" style="flex-direction: column; text-align: center;">
         <h1 style="width: 80%;">
-          Registration successfull!
+          Sorry, something went wrong
         </h1>
         <br>
-        <h3 style="width: 60%; margin-top: 100px; text-align: center;">
+        <h4 style="width: 60%; margin-top: 100px; text-align: center;">
           You will be redirected to the login page
-        </h3>
+        </h4>
       </div>
 
   </div> <!-- id="shine-div" -->
