--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,11 @@ body {
     position:relative;
 }
 
+#shine-div_fail {
+    overflow:hidden;
+    position:relative;
+}
+
 #shine-div:before {
     content:"";
     position:absolute;
@@ -18,6 +23,19 @@ body {
     width:400%;
     height:200%;
     background: radial-gradient(farthest-corner at top, rgb(5,30,100)1%, rgb(60,5,80) 45%);
+    animation: colorChange 20s infinite alternate linear;
+    overflow: hidden;
+}
+
+#shine-div_fail:before {
+    content:"";
+    position:absolute;
+    z-index:-4;
+    top:0;
+    left:0;
+    width:400%;
+    height:200%;
+    background: radial-gradient(farthest-corner at top, rgb(40,40,40)1%, rgb(150,10,5) 45%);
     animation: colorChange 20s infinite alternate linear;
     overflow: hidden;
 }
@@ -59,7 +77,7 @@ h1:hover{
 #span_username{
     background-color: rgb(20,10,80);
     padding: 3px 7px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 #logout-box{
@@ -142,7 +160,7 @@ p:hover{
     background-color: transparent;
 }
 
-#change_pw-form input{
+#lost_access-form input{
     width: 90%;
     border: none;
     outline: none;
@@ -161,7 +179,7 @@ p:hover{
     margin: 15px 0 5px;
 }
 
-#change_pw-form button{
+#lost_access-form button{
     width: 100%;
     border: none;
     outline: none;
@@ -171,7 +189,7 @@ p:hover{
     background-color: rgb(44,6,60);
 }
 
-#change_pw-form button:hover{
+#lost_access-form button:hover{
     background-color: rgb(22,3,30);
 }
 
@@ -201,20 +219,20 @@ p:hover{
     background-color: rgb(22,3,30);
 }
 
-.row-buttons #change_pw{
-    width: 54%;
+.row-buttons #lost_access{
+    width: 46%;
     margin-right: 5px;
     margin-top: 5px;
     background-color: transparent;
     border: 1px solid rgb(6,20,80)
 }
-#change_pw:hover{
+#lost_access:hover{
     background-color: rgb(3,10,40);
     border: 1px solid rgb(3,10,40);
 }
 
 .row-buttons #demo{
-    width: 46%;
+    width: 54%;
     margin-left: 5px;
     margin-top: 5px;
 }
