--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,14 +32,13 @@
                 <button type="button" form="register-form" name="register" id="register">Register</button>
               </div>
               <div class="row-buttons">
-                <button type="button" name="change_pw" id="change_pw" form="change_pw-form">Lost Access</button>
+                <button type="submit" name="lost_access" id="lost_access" form="lost_access-form">Lost Access</button>
                 <button type="button" class="btn-hover color-3" id="demo" form="demo-form">Demonstration</button>
               </div>
             </form>
-            <form action="/manage_account" method="post" name="change_pw-form" id="change_pw-form" hidden></form>
+            <form action="/lost_access" method="get" name="lost_acess-form" id="lost_access-form" hidden></form>
             <form action="/register" method="post" name="register-form" id="register-form" hidden></form>
-            <form action="/login" method="post" name="demo-form" id="demo-form" hidden></form>
-            <input type="number" name="guest" id="guest" value=1 form="demo-form" hidden>
+            <form action="/demonstration" method="post" name="demo-form" id="demo-form" hidden></form>
           </div>
 
           <div class="login-box-2" id="why_location">
@@ -51,8 +50,6 @@
           <div class="login-box-2"><p>by Ivan M Fachini <br> as <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
 
         </div>
-
-
       </div>
 
   </div> <!-- id="shine-div" -->
