--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,12 @@
           <div class="row">
             <div class="col" id="title-box">
               <h1>Good <span id="period_of_day">day</span>, <span id="span_username"><%=first_name_PH%></span></h1>
-              <div id="logout-box">&#8618;</div>
+              <div id="logout-box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
+                  <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3zm1 13h8V2H4z"/>
+                  <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0"/>
+                </svg>
+              </div>
               <form hidden action="/home" method="post" name="logout-form" id="logout-form">
                 <input hidden type="number" name="logout" id="logout" value=1>
               </form>
