change hour offset + to -

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     <div hidden id="celsius" style="height: 0;"><%=celsius_PH%></div>
     <div hidden id="mili_diff" style="height: 0;"><%=mili_diff_PH%></div>
     <div hidden id="tmz_suffix" style="height: 0;"><%=tmz_suffix_PH%></div>
+    <div hidden id="hour_offset" style="height: 0;"><%=hour_offset_PH%></div>
 
     <div id="shine-div">      
       <div class="container">
