--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form">
               <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
-              <input type="password" name="password" id="password" placeholder="password" maxlength="50" required> <br>
+              <input type="password" name="password" id="password" placeholder="password" maxlength="50" required>
               <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off" required>
               <div class="row-buttons">
                 <button type="button" name="login" id="login">Login</button>
