--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Notes & Projects</title>
-    <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
+    <link rel="shortcut icon" type="image/png" href="img/fav_notes.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
