--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,7 @@
               <div class="row-buttons">
                 <button type="submit" name="lost_access" id="lost_access" form="lost_access-form">Lost Access</button>
                 <button type="button" class="btn-hover color-3" id="demo" form="demo-form">Demonstration</button>
+                <button disabled type="button" id="oauth_google" style="width: 100%; background-color: red;">!OAuth tests!</button>
               </div>
             </form>
             <form action="/lost_access" method="get" name="lost_acess-form" id="lost_access-form" hidden></form>
