fix button oauth

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,8 +34,8 @@
               <div class="row-buttons">
                 <button type="submit" name="lost_access" id="lost_access" form="lost_access-form">Lost Access</button>
                 <button type="button" class="btn-hover color-3" id="demo" form="demo-form">Demonstration</button>
-                <button disabled type="button" id="oauth_google" style="width: 100%; background-color: red;">!OAuth tests!</button>
               </div>
+              <button disabled type="button" id="oauth_google" style="width: 90%; background-color: darkred;">!OAuth tests!</button>
             </form>
             <form action="/lost_access" method="get" name="lost_acess-form" id="lost_access-form" hidden></form>
             <form action="/register" method="post" name="register-form" id="register-form" hidden></form>
