google auth try1

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,7 +137,7 @@ p:hover{
     text-decoration: none;
 }
 
-.login-form{
+.login_buttons{
     display: flex;
     flex-flow: column;
     align-items: center;
