--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,7 +36,7 @@
                 <button type="button" class="btn-hover color-3" id="demo" form="demo-form">Demonstration</button>
               </div>
             </form>
-            <form action="login_google" method="get" name="oauth_google" id="oauth_google" class="login_buttons">
+            <form action="/login_google" method="get" name="oauth_google" id="oauth_google" class="login_buttons">
               <button type="submit" id="oauth_google" style="width: 90%; background-color: darkred;">#Login with Google#</button>
             </form>
             <form action="/lost_access" method="get" name="lost_acess-form" id="lost_access-form" hidden></form>
