--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -150,6 +150,12 @@ p:hover{
     color: rgb(240,240,206);
 }
 
+#login-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #login-form input{
     width: 90%;
     border: none;
