--- a/views/index.ejs
+++ b/views/index.ejs
@@ -849,7 +849,7 @@
           </div>
 
           <div class="shade_project_box">
-            <div id="confirm_project_deletion">              
+            <div class="confirm_deletion_box">              
               <div class="center-container" id="delete_warning"> This will delete the whole project </div>
               <div class="center-container">
                 <button type="button" class="project_buttons" id="confirm_deletion_button"> Yes, delete </button>
@@ -859,7 +859,7 @@
           </div>
 
           <div class="shade_project_box">
-            <div id="confirm_acc_deletion">              
+            <div class="confirm_deletion_box">                  
               <div class="center-container" id="delete_warning_acc">Account deletion is irreversible!</div>
               <div class="center-container">
                 <button type="button" class="project_buttons" id="confirm_deletion_button_acc"> Yes, delete </button>
