--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,9 +28,9 @@
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
               <input type="password" name="password" id="password" placeholder="password" maxlength="50" required>
               <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off" required>
-              <div style="display: flex; flex-direction: column; width: 100%;">
-                <input type="radio" id="policy_accept" name="policy_accept" value=1 required/>
-                  <label for="policy_accept">I have read and accept the <a href="/privacy_policy">Privacy Policy</a></label>
+              <div style="display: flex; width: 90%; align-self: center;">
+                <input type="radio" id="policy_accept" name="policy_accept" value=1 width="16px" required/>
+                  <label for="policy_accept" style="padding-left: 12px; font-size: 0.9rem;">I have read and accept the <br> <a href="/privacy_policy">Privacy Policy</a></label>
               </div>
               <div class="row-buttons">
                 <button type="button" name="login" id="login">Login</button>
