--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -17,9 +17,7 @@
 <body>
   <div id="shine-div">
     <div class="whole-screen" style="flex-direction: column; text-align: center;">
-      <object data="Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf" type="application/pdf" width="700px" height="700px">
-        <embed src="/public/Privacy_Policy/Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf">
-    </object>
+      <object data="/public/Privacy_Policy/Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf" type="application/pdf" width="90%" height="700px" style="align-self: center;"></object>
     </div>
   </div> <!-- id="shine-div" -->
 
