--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -16,8 +16,10 @@
 
 <body>
   <div id="shine-div">
-    <div class="whole-screen" style="flex-direction: column; text-align: center;">
-      <object data="/public/Privacy_Policy/Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf" type="application/pdf" width="90%" height="700px" style="align-self: center;"></object>
+    <div id="privacy_policy_box" class="whole-screen" style="flex-direction: column; text-align: center;">
+      <object data="/public/Privacy_Policy/Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf" type="application/pdf" width="90%" height="700px">
+        <p>Unable to display PDF file. <a href="/public/Privacy_Policy/Privacy_Policy_Notes&Projects_v1-0-0_Dec2023_EN.pdf">Download</a> instead.</p>
+      </object>
     </div>
   </div> <!-- id="shine-div" -->
 
