--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
               <input type="password" name="password" id="password" placeholder="password" maxlength="50" required>
               <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off" required>
-              <div style="display: flex; width: 90%; align-self: center;">
+              <div id="privacy_policy_warning" style="display: flex; width: 90%; align-self: center;">
                 <input type="radio" id="policy_accept" name="policy_accept" value=1 style="width: 16px;" required/>
                   <label for="policy_accept" style="padding-left: 12px; font-size: 0.9rem;">I have read and accept the <br> <a href="/privacy_policy">Privacy Policy</a></label>
               </div>
