--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -17,9 +17,7 @@
 <body>
   <div id="shine-div">
     <div id="privacy_policy_box" class="whole-screen" style="flex-direction: column; text-align: center;">
-      <object data="/public/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" type="application/pdf" width="90%" height="700px">
-        <p>Unable to display PDF file. <a href="/public/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf">Download</a> instead.</p>
-      </object>
+      <object type="application/pdf" data="/public/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" width="250" height="200"></object>
     </div>
   </div> <!-- id="shine-div" -->
 
