--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -17,7 +17,7 @@
 <body>
   <div id="shine-div">
     <div id="privacy_policy_box" class="whole-screen" style="flex-direction: column; text-align: center;">
-      <object type="application/pdf" data="/public/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" width="250" height="200"></object>
+      <iframe src="/public/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" frameborder="0"></iframe>
     </div>
   </div> <!-- id="shine-div" -->
 
