--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
               <input type="password" name="password-confirm" id="password-confirm" placeholder="confirm password" autocomplete="off" required>
               <div id="privacy_policy_warning" style="display: flex; width: 90%; align-self: center;">
                 <input type="radio" id="policy_accept" name="policy_accept" value=1 style="width: 16px;" required/>
-                  <label for="policy_accept" style="padding-left: 12px; font-size: 0.9rem; letter-spacing: -0.6px;">I have read and accept the <a href="/privacy_policy">Privacy Policy</a></label>
+                  <label for="policy_accept" style="padding-left: 12px; font-size: 0.9rem; letter-spacing: -0.6px; align-self: center;">I have read and accept the <a href="/privacy_policy">Privacy Policy</a></label>
               </div>
               <div class="row-buttons">
                 <button type="button" name="login" id="login">Login</button>
