--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -16,9 +16,9 @@
 
 <body>
   <div id="shine-div">
-    <div id="privacy_policy_box" class="whole-screen" style="flex-direction: column; text-align: center;">
-      <iframe src="/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" frameborder="0"></iframe>
-    </div>
+    <iframe src="/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" frameborder="0" style="width: 100%; height: 80vh;"></iframe>
+    <button class="download_policy">Download</button>
+    <button class="download_policy">Download - português 🇧🇷</button>
   </div> <!-- id="shine-div" -->
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
