--- a/views/politica_de_privacidade.ejs
+++ b/views/politica_de_privacidade.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy Policy</title>
+  <title>Política de Privacidade</title>
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <iframe src="/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_EN.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
+  <iframe src="/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_PT.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
