--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Notes & Projects</title>
+  <title><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a></title>
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
               <div class="row-buttons">
                 <button type="submit" id="oauth_google_btn"><div style="margin-bottom: 4px;"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
                   <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
-                </svg></div>Login with Google</button>
+                </svg></div>Login with Google (test version)</button>
               </div>
             </form>
             <form action="/lost_access" method="get" name="lost_acess-form" id="lost_access-form" hidden></form>
@@ -86,6 +86,9 @@
   </div>
   <div class="auxiliar_note" id="pw_not_match">
     <p>Passwords do not match</p>
+  </div>
+  <div class="auxiliar_note" id="test_version">
+    <p>Per Google's API & Services recommendation. This means that one would need to send its e-mail to the developer (<a>imf9048@gmail.com</a>) to be put in a list of test users beforehand</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
