--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a></title>
+  <title>Notes & Projects</title>
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
 
         <div id="login-box">
           <div id="box-1">
-            <h5>Notes & Projects</h5>
+            <h5><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a></h5>
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form" class="login_buttons">
               <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
