--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 
         <div id="login-box">
           <div id="box-1">
-            <h5><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a></h5>
+            <h5><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a> by <a href="https://github.com/imanastronaut">Ivan M Fachini</a></h5>
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form" class="login_buttons">
               <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
@@ -59,7 +59,7 @@
             </svg>&nbsp;&nbsp;Why is it asking for my location?</p>
           </div>
 
-          <div class="login-box-2"><p>by Ivan M Fachini <br> as <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
+          <div class="login-box-2"><p>as a <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
 
         </div>
       </div>
@@ -88,7 +88,7 @@
     <p>Passwords do not match</p>
   </div>
   <div class="auxiliar_note" id="test_version">
-    <p>Per Google's API & Services recommendation. This means that one would need to send its e-mail to the developer (<a>imf9048@gmail.com</a>) to be put in a list of test users beforehand</p>
+    <p>Test version per Google's API & Services recommendation. This means that one's e-mail should be on a list of test users beforehand. Contact the me using the links above.</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
