--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,6 +137,10 @@ p:hover{
     text-decoration: none;
 }
 
+a{
+    text-decoration: none;
+}
+
 .login_buttons{
     display: flex;
     flex-flow: column;
