--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 
         <div id="login-box">
           <div id="box-1">
-            <h5><a href="https://github.com/imanastronaut/not_proj">Notes & Projects</a> by <a href="https://github.com/imanastronaut">Ivan M Fachini</a></h5>
+            <h5>Notes & Projects <a href="https://youtu.be/MPtzaN_4deg"><i class="bi bi-youtube"></i></a> by Ivan M Fachini <a href="https://github.com/imanastronaut"><i class="bi bi-github"></i></a></h5>
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form" class="login_buttons">
               <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
@@ -59,7 +59,7 @@
             </svg>&nbsp;&nbsp;Why is it asking for my location?</p>
           </div>
 
-          <div class="login-box-2"><p>as a <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
+          <div class="login-box-2"><p>This is a <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
 
         </div>
       </div>
