--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1185,6 +1185,10 @@ input {
     margin-top: 20px;
 }
 
+a{
+    text-decoration: none;
+}
+
 
 /* >>>>>>>>>>>>>>>>>>>>>>> MEDIA QUERIES <<<<<<<<<<<<<<<<<<<<<<<<<<<
    >>>>>>>>>>>>>>>>>>>>>>> MEDIA QUERIES <<<<<<<<<<<<<<<<<<<<<<<<<<<
