--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 
         <div id="login-box">
           <div id="box-1">
-            <h5>Notes & Projects <a href="https://youtu.be/MPtzaN_4deg"><i class="bi bi-youtube"></i></a> by Ivan M Fachini <a href="https://github.com/imanastronaut"><i class="bi bi-github"></i></a></h5>
+            <h5>Notes & Projects <i class="bi bi-youtube"><a href="https://youtu.be/MPtzaN_4deg"></a></i> by Ivan M Fachini <i class="bi bi-github"><a href="https://github.com/imanastronaut"></a></i></h5>
             <form action="/login" method="post" name="login-form" class="login-form" id="login-form" class="login_buttons">
               <input type="text" name="username" id="username" placeholder="username" autocomplete="off" maxlength="30" autofocus required>
               <input type="text" name="realname" id="realname" placeholder="your first name" autocomplete="off" maxlength="20" required>
