--- a/views/login.ejs
+++ b/views/login.ejs
@@ -73,7 +73,7 @@
             </svg>&nbsp;&nbsp;Why is it asking for my location?</p>
           </div>
 
-          <div class="login-box-2"><p>This is a <a href="https://cs50.harvard.edu/">Harvard's CS50</a> 2023 Final Project</p></div>
+          <div class="login-box-2"><p><a href="/certificates">My certificates</a></p></div>
 
         </div>
       </div>
@@ -102,7 +102,7 @@
     <p>Passwords do not match</p>
   </div>
   <div class="auxiliar_note" id="test_version">
-    <p>Test version per Google's API & Services recommendation. This means that one's e-mail should be on a list of test users beforehand. Contact the me using the links above.</p>
+    <p>Test version per Google's API & Services recommendation. This means that one's e-mail should be on a list of test users beforehand. Please contact me if that is the case.</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
