--- a/views/login.ejs
+++ b/views/login.ejs
@@ -102,7 +102,7 @@
     <p>Passwords do not match</p>
   </div>
   <div class="auxiliar_note" id="test_version">
-    <p>Test version per Google's API & Services recommendation. This means that one's e-mail should be on a list of test users beforehand. Please contact me if that is the case.</p>
+    <p>Test version per Google's API & Services recommendation. This means that one's e-mail should be on a list of test users beforehand. Please contact me if you want to include it.</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
