--- a/views/login.ejs
+++ b/views/login.ejs
@@ -77,7 +77,7 @@
             </svg>&nbsp;&nbsp;Why is it asking for my location?</p>
           </div>
 
-          <div class="login-box-2"><h5>My Certificates: </h5><a href="/certificates">2023</a></div>
+          <div class="login-box-2"><h5>My Certificates: <a href="/certificates">2023</a></h5></div>
 
         </div>
       </div>
