--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,7 +155,7 @@ a{
 }
 
 .login-box-2 h5{
-    padding: 5px 0 16px 5%;
+    padding: 5px 0 0 5%;
     margin: 0;
     color: rgb(240,240,206);
 }
