--- a/views/certificates.ejs
+++ b/views/certificates.ejs
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
 </head>
 
-<body>
+<body style="background-color: black;">
   <iframe src="/certificates/CS50_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 90vh;"></iframe>
   <iframe src="/certificates/CS1301xIV_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 90vh;"></iframe>
 </body>
