--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -8,8 +8,8 @@
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">  
 </head>
 
-<body>
-  <iframe src="/cv/CV_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 90vh;"></iframe>
+<body style="background-color: black;">
+  <iframe src="/cv/CV_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
 </body>
 
 </html>
