--- a/views/politica_de_privacidade.ejs
+++ b/views/politica_de_privacidade.ejs
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">
 </head>
 
-<body>
+<body style="background-color: black;">
   <iframe src="/Privacy_Policy/Privacy_Policy_NotesProjects_v100_Dec2023_PT.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
 </body>
 
