--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Curriculum Vitae</title>
+  <title>CV_IvanMFachini</title>
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">  
 </head>
 
-<body style="background-color: black;">
+<body>
   <iframe src="/cv/CV_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
 </body>
 
