--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV_IvanMFachini</title>
+  <title>CV_IvanMFachini_jan24</title>
   <link rel="shortcut icon" type="image/png" href="/img/fav_notes.png">  
 </head>
 
 <body>
-  <iframe src="/cv/CV_IvanMFachini.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
+  <iframe src="/cv/CV_IvanMFachini_jan24.pdf" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
 </body>
 
 </html>
